--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1 style="font-family:helvetica;">Constanza P. de la Fuente Castro</h1>
+<h1 style="text-align:center;font-family:helvetica;">Constanza P. de la Fuente Castro</h1>
 
-<p style="font-family:helvetica;">Work in progress.</p>
+<p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 
 </body>
 </html>
