--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 
-<h1 style="text-align:center;font-family:helvetica;">Constanza P. de la Fuente Castro</h1>
+<h1 style="text-align:center;font-family:helvetica;"> Constanza P. de la Fuente Castro</h1>
+
+<h3 style="text-align:center;font-family:helvetica;"> Postdoctoral Scholar<br>Department of Human Genetics<br>University of Chicago
+</h3>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 
