--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </h4>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
-
+<img src="https://github.com/cdelaf/cdelaf.github.io/blob/main/images/IMG_20210313_121046.jpeg"
+     height="150">
 </body>
 </html>
