--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
-<img src="images/IMG_20210313_121046.jpeg"
+<img align="left" src="images/IMG_20210313_121046.jpeg"
      >
 </body>
 </html>
