--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 <img align="left" src="images/IMG_20210313_121046.jpeg"
-     >
+     height="600">
 </body>
 </html>
