--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
-<img align="left" src="images/IMG_20210313_121046.jpeg"
-     height="600">
+<img class="center" src="images/IMG_20210313_121046.jpeg"
+     height="400">
 </body>
 </html>
