--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+     <head>
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+</head>
 <body>
 
 <h1 style="text-align:center;font-family:helvetica;"> Constanza P. de la Fuente Castro</h1>
@@ -8,7 +17,7 @@
 </h4>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
-<img class="center" src="images/IMG_20210313_121046.jpeg"
+<img src="images/IMG_20210313_121046.jpeg"
      height="400">
 </body>
 </html>
