--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+* {
+ font-family: helvetica;
+}
 </style>
 </head>
 <body>
@@ -24,6 +27,20 @@ img {
 		<li><a href="Publications">Publications</a></li>
 		<li><a href="Random">Random</a></li>
 	</ul>
+</div>
+
+	<div class="tab-content">
+	<div id="Research" class="tab active">
+		<p>Work in progress</p>
+	</div>
+
+	<div id="Publications" class="tab">
+		<p>Tab #2 content goes here!</p>
+	</div>
+
+	<div id="Random" class="tab">
+		<p>Tab #3 content goes here!</p>
+	</div>
 </div>
      
 <img src="images/IMG_20210313_121046.jpeg"
