--- a/index.html
+++ b/index.html
@@ -21,26 +21,10 @@ img {
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
  
-<div class="tabs">
-	<ul class="tab-links">
-		<li class="active"><a href="Research">Research</a></li>
-		<li><a href="Publications">Publications</a></li>
-		<li><a href="Random">Random</a></li>
-	</ul>
-</div>
-
-	<div class="tab-content">
-	<div id="Research" class="tab active">
-		<p>Work in progress</p>
-	</div>
-
-	<div id="Publications" class="tab">
-		<p>Tab #2 content goes here!</p>
-	</div>
-
-	<div id="Random" class="tab">
-		<p>Tab #3 content goes here!</p>
-	</div>
+<div class="w3-bar">
+  <a href="Research" class="w3-button">Research</a>
+  <a href="Publications" class="w3-button">Publications</a>
+  <a href="Random" class="w3-button">Random</a>
 </div>
      
 <img src="images/IMG_20210313_121046.jpeg"
