--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ img {
 </h4>
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
- 
+
+<div class="w3-right">
 <div class="w3-bar">
-  <a href="Research" class="w3-button">Research</a>
-  <a href="Publications" class="w3-button">Publications</a>
-  <a href="Random" class="w3-button">Random</a>
+  <a href="Research" class="w3-button w3-hover-purple">Research</a>
+  <a href="Publications" class="w3-button w3-hover-green">Publications</a>
+  <a href="Random" class="w3-button w3-hover-orange">Random</a>
 </div>
      
 <img src="images/IMG_20210313_121046.jpeg"
