--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ img {
 
 <div class="w3-right">
 <div class="w3-bar">
-  <a href="Research" class="w3-button w3-hover-purple">Research</a>
-  <a href="Publications" class="w3-button w3-hover-green">Publications</a>
-  <a href="Random" class="w3-button w3-hover-orange">Random</a>
+  <a href="Research" class="w3-bar-item w3-hover-purple w3-right">Research</a>
+  <a href="Publications" class="w3-bar-item w3-hover-green w3-right">Publications</a>
+  <a href="Random" class="w3-bar-item w3-hover-orange w3-right">Random</a>
 </div>
      
 <img src="images/IMG_20210313_121046.jpeg"
