--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ img {
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 
-<div class="w3-right">
 <div class="w3-bar">
   <a href="Research" class="w3-bar-item w3-button w3-hover-purple w3-right">Research</a>
   <a href="Publications" class="w3-bar-item w3-button w3-hover-green w3-right">Publications</a>
@@ -30,5 +29,7 @@ img {
      
 <img src="images/IMG_20210313_121046.jpeg"
      height="400">
+
+</div>
 </body>
 </html>
