--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ img {
 
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 
-<div class="w3-bar">
-  <a href="Research" class="w3-bar-item w3-button w3-hover-purple w3-right">Research</a>
-  <a href="Publications" class="w3-bar-item w3-button w3-hover-green w3-right">Publications</a>
-  <a href="Random" class="w3-bar-item w3-button w3-hover-orange w3-right">Random</a>
+<div class="w3-bar" align="right">
+  <a href="Research" class="w3-bar-item w3-button w3-hover-purple">Research</a>
+  <a href="Publications" class="w3-bar-item w3-button w3-hover-green">Publications</a>
+  <a href="Random" class="w3-bar-item w3-button w3-hover-orange">Random</a>
 </div>
      
 <img src="images/IMG_20210313_121046.jpeg"
