--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
      <head>
+<link rel="stylesheet" href="mystyle.css">
 <style>
 img {
   display: block;
@@ -14,22 +15,24 @@ img {
 </head>
 <body>
 
+  <div class="center">
+  <div class="paginate" align="right">
+    <a href="Research" class="w3-bar-item w3-button w3-hover-purple">Research</a>
+    <a href="Publications" class="w3-bar-item w3-button w3-hover-green">Publications</a>
+    <a href="Random" class="w3-bar-item w3-button w3-hover-orange">Random</a>
+  </div>
+
+
 <h1 style="text-align:center;font-family:helvetica;"> Constanza P. de la Fuente Castro</h1>
 
 <h4 style="text-align:center;font-family:helvetica;"> Postdoctoral Scholar<br>Department of Human Genetics<br>University of Chicago
 </h4>
 
+
 <p style="text-align:center;font-family:helvetica;">Work in progress.</p>
 
-<div class="w3-bar" align="right">
-  <a href="Research" class="w3-bar-item w3-button w3-hover-purple">Research</a>
-  <a href="Publications" class="w3-bar-item w3-button w3-hover-green">Publications</a>
-  <a href="Random" class="w3-bar-item w3-button w3-hover-orange">Random</a>
-</div>
-     
 <img src="images/IMG_20210313_121046.jpeg"
      height="400">
 
-</div>
 </body>
 </html>
